...
                android:hint="0.00"
                android:layout_marginStart="8dp"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/et_qty"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="1"
                android:layout_marginStart="8dp"
                android:imeOptions="actionDone"
                android:singleLine="true"/>

            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:contentDescription="Delete"
                android:src="@android:drawable/ic_delete"/>
        </LinearLayout>
...
